// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField DateField_should_call_onPropChange_onChange 1`] = `
DateField {
  "changeHandler": [Function],
  "context": Object {},
  "propogateOnChange": [Function],
  "props": Object {
    "customClasses": "col-6",
    "formData": Object {},
    "idSchema": Object {
      "$id": "formOne_DateOne",
    },
    "onChange": [Function],
    "schema": Object {
      "title": "Date Selector",
    },
    "uiSchema": Object {
      "ui:options": Object {
        "prefix": "some_prefix_",
      },
    },
  },
  "refs": Object {},
  "setState": [Function],
  "state": null,
  "updater": Updater {
    "_callbacks": Array [],
    "_renderer": ReactShallowRenderer {
      "_context": Object {},
      "_didScheduleRenderPhaseUpdate": false,
      "_dispatcher": Object {
        "readContext": [Function],
        "useCallback": [Function],
        "useContext": [Function],
        "useDebugValue": [Function],
        "useEffect": [Function],
        "useImperativeHandle": [Function],
        "useLayoutEffect": [Function],
        "useMemo": [Function],
        "useReducer": [Function],
        "useRef": [Function],
        "useState": [Function],
      },
      "_element": <DateField
        customClasses="col-6"
        formData={Object {}}
        idSchema={
          Object {
            "$id": "formOne_DateOne",
          }
        }
        onChange={[Function]}
        schema={
          Object {
            "title": "Date Selector",
          }
        }
        uiSchema={
          Object {
            "ui:options": Object {
              "prefix": "some_prefix_",
            },
          }
        }
      />,
      "_firstWorkInProgressHook": null,
      "_forcedUpdate": false,
      "_instance": [Circular],
      "_isReRender": false,
      "_newState": null,
      "_numberOfReRenders": 0,
      "_renderPhaseUpdates": null,
      "_rendered": <div
        className="c-label-field"
      >
        <label
          className="control-label"
          id="formOne_DateOne"
        >
          Date Selector
        </label>
        <div
          className="d-flex"
        >
          <Dropdown
            customClasses="mr-3 w-50"
            id="formOne_DateOne_month"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Month",
                    "value": 0,
                  },
                  Object {
                    "label": "January",
                    "value": 1,
                  },
                  Object {
                    "label": "February",
                    "value": 2,
                  },
                  Object {
                    "label": "March",
                    "value": 3,
                  },
                  Object {
                    "label": "April",
                    "value": 4,
                  },
                  Object {
                    "label": "May",
                    "value": 5,
                  },
                  Object {
                    "label": "June",
                    "value": 6,
                  },
                  Object {
                    "label": "July",
                    "value": 7,
                  },
                  Object {
                    "label": "August",
                    "value": 8,
                  },
                  Object {
                    "label": "September",
                    "value": 9,
                  },
                  Object {
                    "label": "October",
                    "value": 10,
                  },
                  Object {
                    "label": "November",
                    "value": 11,
                  },
                  Object {
                    "label": "December",
                    "value": 12,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_day"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Day",
                    "value": 0,
                  },
                  Object {
                    "label": "01",
                    "value": 1,
                  },
                  Object {
                    "label": "02",
                    "value": 2,
                  },
                  Object {
                    "label": "03",
                    "value": 3,
                  },
                  Object {
                    "label": "04",
                    "value": 4,
                  },
                  Object {
                    "label": "05",
                    "value": 5,
                  },
                  Object {
                    "label": "06",
                    "value": 6,
                  },
                  Object {
                    "label": "07",
                    "value": 7,
                  },
                  Object {
                    "label": "08",
                    "value": 8,
                  },
                  Object {
                    "label": "09",
                    "value": 9,
                  },
                  Object {
                    "label": "10",
                    "value": 10,
                  },
                  Object {
                    "label": "11",
                    "value": 11,
                  },
                  Object {
                    "label": "12",
                    "value": 12,
                  },
                  Object {
                    "label": "13",
                    "value": 13,
                  },
                  Object {
                    "label": "14",
                    "value": 14,
                  },
                  Object {
                    "label": "15",
                    "value": 15,
                  },
                  Object {
                    "label": "16",
                    "value": 16,
                  },
                  Object {
                    "label": "17",
                    "value": 17,
                  },
                  Object {
                    "label": "18",
                    "value": 18,
                  },
                  Object {
                    "label": "19",
                    "value": 19,
                  },
                  Object {
                    "label": "20",
                    "value": 20,
                  },
                  Object {
                    "label": "21",
                    "value": 21,
                  },
                  Object {
                    "label": "22",
                    "value": 22,
                  },
                  Object {
                    "label": "23",
                    "value": 23,
                  },
                  Object {
                    "label": "24",
                    "value": 24,
                  },
                  Object {
                    "label": "25",
                    "value": 25,
                  },
                  Object {
                    "label": "26",
                    "value": 26,
                  },
                  Object {
                    "label": "27",
                    "value": 27,
                  },
                  Object {
                    "label": "28",
                    "value": 28,
                  },
                  Object {
                    "label": "29",
                    "value": 29,
                  },
                  Object {
                    "label": "30",
                    "value": 30,
                  },
                  Object {
                    "label": "31",
                    "value": 31,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_year"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Year",
                    "value": 0,
                  },
                  Object {
                    "label": "2019",
                    "value": 2019,
                  },
                  Object {
                    "label": "2018",
                    "value": 2018,
                  },
                  Object {
                    "label": "2017",
                    "value": 2017,
                  },
                  Object {
                    "label": "2016",
                    "value": 2016,
                  },
                  Object {
                    "label": "2015",
                    "value": 2015,
                  },
                  Object {
                    "label": "2014",
                    "value": 2014,
                  },
                  Object {
                    "label": "2013",
                    "value": 2013,
                  },
                  Object {
                    "label": "2012",
                    "value": 2012,
                  },
                  Object {
                    "label": "2011",
                    "value": 2011,
                  },
                  Object {
                    "label": "2010",
                    "value": 2010,
                  },
                  Object {
                    "label": "2009",
                    "value": 2009,
                  },
                  Object {
                    "label": "2008",
                    "value": 2008,
                  },
                  Object {
                    "label": "2007",
                    "value": 2007,
                  },
                  Object {
                    "label": "2006",
                    "value": 2006,
                  },
                  Object {
                    "label": "2005",
                    "value": 2005,
                  },
                  Object {
                    "label": "2004",
                    "value": 2004,
                  },
                  Object {
                    "label": "2003",
                    "value": 2003,
                  },
                  Object {
                    "label": "2002",
                    "value": 2002,
                  },
                  Object {
                    "label": "2001",
                    "value": 2001,
                  },
                  Object {
                    "label": "2000",
                    "value": 2000,
                  },
                  Object {
                    "label": "1999",
                    "value": 1999,
                  },
                  Object {
                    "label": "1998",
                    "value": 1998,
                  },
                  Object {
                    "label": "1997",
                    "value": 1997,
                  },
                  Object {
                    "label": "1996",
                    "value": 1996,
                  },
                  Object {
                    "label": "1995",
                    "value": 1995,
                  },
                  Object {
                    "label": "1994",
                    "value": 1994,
                  },
                  Object {
                    "label": "1993",
                    "value": 1993,
                  },
                  Object {
                    "label": "1992",
                    "value": 1992,
                  },
                  Object {
                    "label": "1991",
                    "value": 1991,
                  },
                  Object {
                    "label": "1990",
                    "value": 1990,
                  },
                  Object {
                    "label": "1989",
                    "value": 1989,
                  },
                  Object {
                    "label": "1988",
                    "value": 1988,
                  },
                  Object {
                    "label": "1987",
                    "value": 1987,
                  },
                  Object {
                    "label": "1986",
                    "value": 1986,
                  },
                  Object {
                    "label": "1985",
                    "value": 1985,
                  },
                  Object {
                    "label": "1984",
                    "value": 1984,
                  },
                  Object {
                    "label": "1983",
                    "value": 1983,
                  },
                  Object {
                    "label": "1982",
                    "value": 1982,
                  },
                  Object {
                    "label": "1981",
                    "value": 1981,
                  },
                  Object {
                    "label": "1980",
                    "value": 1980,
                  },
                  Object {
                    "label": "1979",
                    "value": 1979,
                  },
                  Object {
                    "label": "1978",
                    "value": 1978,
                  },
                  Object {
                    "label": "1977",
                    "value": 1977,
                  },
                  Object {
                    "label": "1976",
                    "value": 1976,
                  },
                  Object {
                    "label": "1975",
                    "value": 1975,
                  },
                  Object {
                    "label": "1974",
                    "value": 1974,
                  },
                  Object {
                    "label": "1973",
                    "value": 1973,
                  },
                  Object {
                    "label": "1972",
                    "value": 1972,
                  },
                  Object {
                    "label": "1971",
                    "value": 1971,
                  },
                  Object {
                    "label": "1970",
                    "value": 1970,
                  },
                  Object {
                    "label": "1969",
                    "value": 1969,
                  },
                ],
              }
            }
          />
        </div>
      </div>,
      "_rendering": false,
      "_updater": [Circular],
      "_workInProgressHook": null,
    },
  },
}
`;

exports[`DateField render_DateField 1`] = `
DateField {
  "changeHandler": [Function],
  "context": Object {},
  "propogateOnChange": [Function],
  "props": Object {
    "customClasses": "col-6",
    "formData": Object {},
    "idSchema": Object {
      "$id": "formOne_DateOne",
    },
    "schema": Object {
      "title": "Date Selector",
    },
  },
  "refs": Object {},
  "setState": [Function],
  "state": null,
  "updater": Updater {
    "_callbacks": Array [],
    "_renderer": ReactShallowRenderer {
      "_context": Object {},
      "_didScheduleRenderPhaseUpdate": false,
      "_dispatcher": Object {
        "readContext": [Function],
        "useCallback": [Function],
        "useContext": [Function],
        "useDebugValue": [Function],
        "useEffect": [Function],
        "useImperativeHandle": [Function],
        "useLayoutEffect": [Function],
        "useMemo": [Function],
        "useReducer": [Function],
        "useRef": [Function],
        "useState": [Function],
      },
      "_element": <DateField
        customClasses="col-6"
        formData={Object {}}
        idSchema={
          Object {
            "$id": "formOne_DateOne",
          }
        }
        schema={
          Object {
            "title": "Date Selector",
          }
        }
      />,
      "_firstWorkInProgressHook": null,
      "_forcedUpdate": false,
      "_instance": [Circular],
      "_isReRender": false,
      "_newState": null,
      "_numberOfReRenders": 0,
      "_renderPhaseUpdates": null,
      "_rendered": <div
        className="c-label-field"
      >
        <label
          className="control-label"
          id="formOne_DateOne"
        >
          Date Selector
        </label>
        <div
          className="d-flex"
        >
          <Dropdown
            customClasses="mr-3 w-50"
            id="formOne_DateOne_month"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Month",
                    "value": 0,
                  },
                  Object {
                    "label": "January",
                    "value": 1,
                  },
                  Object {
                    "label": "February",
                    "value": 2,
                  },
                  Object {
                    "label": "March",
                    "value": 3,
                  },
                  Object {
                    "label": "April",
                    "value": 4,
                  },
                  Object {
                    "label": "May",
                    "value": 5,
                  },
                  Object {
                    "label": "June",
                    "value": 6,
                  },
                  Object {
                    "label": "July",
                    "value": 7,
                  },
                  Object {
                    "label": "August",
                    "value": 8,
                  },
                  Object {
                    "label": "September",
                    "value": 9,
                  },
                  Object {
                    "label": "October",
                    "value": 10,
                  },
                  Object {
                    "label": "November",
                    "value": 11,
                  },
                  Object {
                    "label": "December",
                    "value": 12,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_day"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Day",
                    "value": 0,
                  },
                  Object {
                    "label": "01",
                    "value": 1,
                  },
                  Object {
                    "label": "02",
                    "value": 2,
                  },
                  Object {
                    "label": "03",
                    "value": 3,
                  },
                  Object {
                    "label": "04",
                    "value": 4,
                  },
                  Object {
                    "label": "05",
                    "value": 5,
                  },
                  Object {
                    "label": "06",
                    "value": 6,
                  },
                  Object {
                    "label": "07",
                    "value": 7,
                  },
                  Object {
                    "label": "08",
                    "value": 8,
                  },
                  Object {
                    "label": "09",
                    "value": 9,
                  },
                  Object {
                    "label": "10",
                    "value": 10,
                  },
                  Object {
                    "label": "11",
                    "value": 11,
                  },
                  Object {
                    "label": "12",
                    "value": 12,
                  },
                  Object {
                    "label": "13",
                    "value": 13,
                  },
                  Object {
                    "label": "14",
                    "value": 14,
                  },
                  Object {
                    "label": "15",
                    "value": 15,
                  },
                  Object {
                    "label": "16",
                    "value": 16,
                  },
                  Object {
                    "label": "17",
                    "value": 17,
                  },
                  Object {
                    "label": "18",
                    "value": 18,
                  },
                  Object {
                    "label": "19",
                    "value": 19,
                  },
                  Object {
                    "label": "20",
                    "value": 20,
                  },
                  Object {
                    "label": "21",
                    "value": 21,
                  },
                  Object {
                    "label": "22",
                    "value": 22,
                  },
                  Object {
                    "label": "23",
                    "value": 23,
                  },
                  Object {
                    "label": "24",
                    "value": 24,
                  },
                  Object {
                    "label": "25",
                    "value": 25,
                  },
                  Object {
                    "label": "26",
                    "value": 26,
                  },
                  Object {
                    "label": "27",
                    "value": 27,
                  },
                  Object {
                    "label": "28",
                    "value": 28,
                  },
                  Object {
                    "label": "29",
                    "value": 29,
                  },
                  Object {
                    "label": "30",
                    "value": 30,
                  },
                  Object {
                    "label": "31",
                    "value": 31,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_year"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Year",
                    "value": 0,
                  },
                  Object {
                    "label": "2019",
                    "value": 2019,
                  },
                  Object {
                    "label": "2018",
                    "value": 2018,
                  },
                  Object {
                    "label": "2017",
                    "value": 2017,
                  },
                  Object {
                    "label": "2016",
                    "value": 2016,
                  },
                  Object {
                    "label": "2015",
                    "value": 2015,
                  },
                  Object {
                    "label": "2014",
                    "value": 2014,
                  },
                  Object {
                    "label": "2013",
                    "value": 2013,
                  },
                  Object {
                    "label": "2012",
                    "value": 2012,
                  },
                  Object {
                    "label": "2011",
                    "value": 2011,
                  },
                  Object {
                    "label": "2010",
                    "value": 2010,
                  },
                  Object {
                    "label": "2009",
                    "value": 2009,
                  },
                  Object {
                    "label": "2008",
                    "value": 2008,
                  },
                  Object {
                    "label": "2007",
                    "value": 2007,
                  },
                  Object {
                    "label": "2006",
                    "value": 2006,
                  },
                  Object {
                    "label": "2005",
                    "value": 2005,
                  },
                  Object {
                    "label": "2004",
                    "value": 2004,
                  },
                  Object {
                    "label": "2003",
                    "value": 2003,
                  },
                  Object {
                    "label": "2002",
                    "value": 2002,
                  },
                  Object {
                    "label": "2001",
                    "value": 2001,
                  },
                  Object {
                    "label": "2000",
                    "value": 2000,
                  },
                  Object {
                    "label": "1999",
                    "value": 1999,
                  },
                  Object {
                    "label": "1998",
                    "value": 1998,
                  },
                  Object {
                    "label": "1997",
                    "value": 1997,
                  },
                  Object {
                    "label": "1996",
                    "value": 1996,
                  },
                  Object {
                    "label": "1995",
                    "value": 1995,
                  },
                  Object {
                    "label": "1994",
                    "value": 1994,
                  },
                  Object {
                    "label": "1993",
                    "value": 1993,
                  },
                  Object {
                    "label": "1992",
                    "value": 1992,
                  },
                  Object {
                    "label": "1991",
                    "value": 1991,
                  },
                  Object {
                    "label": "1990",
                    "value": 1990,
                  },
                  Object {
                    "label": "1989",
                    "value": 1989,
                  },
                  Object {
                    "label": "1988",
                    "value": 1988,
                  },
                  Object {
                    "label": "1987",
                    "value": 1987,
                  },
                  Object {
                    "label": "1986",
                    "value": 1986,
                  },
                  Object {
                    "label": "1985",
                    "value": 1985,
                  },
                  Object {
                    "label": "1984",
                    "value": 1984,
                  },
                  Object {
                    "label": "1983",
                    "value": 1983,
                  },
                  Object {
                    "label": "1982",
                    "value": 1982,
                  },
                  Object {
                    "label": "1981",
                    "value": 1981,
                  },
                  Object {
                    "label": "1980",
                    "value": 1980,
                  },
                  Object {
                    "label": "1979",
                    "value": 1979,
                  },
                  Object {
                    "label": "1978",
                    "value": 1978,
                  },
                  Object {
                    "label": "1977",
                    "value": 1977,
                  },
                  Object {
                    "label": "1976",
                    "value": 1976,
                  },
                  Object {
                    "label": "1975",
                    "value": 1975,
                  },
                  Object {
                    "label": "1974",
                    "value": 1974,
                  },
                  Object {
                    "label": "1973",
                    "value": 1973,
                  },
                  Object {
                    "label": "1972",
                    "value": 1972,
                  },
                  Object {
                    "label": "1971",
                    "value": 1971,
                  },
                  Object {
                    "label": "1970",
                    "value": 1970,
                  },
                  Object {
                    "label": "1969",
                    "value": 1969,
                  },
                ],
              }
            }
          />
        </div>
      </div>,
      "_rendering": false,
      "_updater": [Circular],
      "_workInProgressHook": null,
    },
  },
}
`;

exports[`DateField render_DateField_with_custom_yearsRange 1`] = `
DateField {
  "changeHandler": [Function],
  "context": Object {},
  "propogateOnChange": [Function],
  "props": Object {
    "customClasses": "col-6",
    "formData": Object {},
    "idSchema": Object {
      "$id": "formOne_DateOne",
    },
    "schema": Object {
      "title": "Date Selector",
    },
    "uiSchema": Object {
      "ui:options": Object {
        "yearsRange": Array [
          1950,
          2019,
        ],
      },
    },
  },
  "refs": Object {},
  "setState": [Function],
  "state": null,
  "updater": Updater {
    "_callbacks": Array [],
    "_renderer": ReactShallowRenderer {
      "_context": Object {},
      "_didScheduleRenderPhaseUpdate": false,
      "_dispatcher": Object {
        "readContext": [Function],
        "useCallback": [Function],
        "useContext": [Function],
        "useDebugValue": [Function],
        "useEffect": [Function],
        "useImperativeHandle": [Function],
        "useLayoutEffect": [Function],
        "useMemo": [Function],
        "useReducer": [Function],
        "useRef": [Function],
        "useState": [Function],
      },
      "_element": <DateField
        customClasses="col-6"
        formData={Object {}}
        idSchema={
          Object {
            "$id": "formOne_DateOne",
          }
        }
        schema={
          Object {
            "title": "Date Selector",
          }
        }
        uiSchema={
          Object {
            "ui:options": Object {
              "yearsRange": Array [
                1950,
                2019,
              ],
            },
          }
        }
      />,
      "_firstWorkInProgressHook": null,
      "_forcedUpdate": false,
      "_instance": [Circular],
      "_isReRender": false,
      "_newState": null,
      "_numberOfReRenders": 0,
      "_renderPhaseUpdates": null,
      "_rendered": <div
        className="c-label-field"
      >
        <label
          className="control-label"
          id="formOne_DateOne"
        >
          Date Selector
        </label>
        <div
          className="d-flex"
        >
          <Dropdown
            customClasses="mr-3 w-50"
            id="formOne_DateOne_month"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Month",
                    "value": 0,
                  },
                  Object {
                    "label": "January",
                    "value": 1,
                  },
                  Object {
                    "label": "February",
                    "value": 2,
                  },
                  Object {
                    "label": "March",
                    "value": 3,
                  },
                  Object {
                    "label": "April",
                    "value": 4,
                  },
                  Object {
                    "label": "May",
                    "value": 5,
                  },
                  Object {
                    "label": "June",
                    "value": 6,
                  },
                  Object {
                    "label": "July",
                    "value": 7,
                  },
                  Object {
                    "label": "August",
                    "value": 8,
                  },
                  Object {
                    "label": "September",
                    "value": 9,
                  },
                  Object {
                    "label": "October",
                    "value": 10,
                  },
                  Object {
                    "label": "November",
                    "value": 11,
                  },
                  Object {
                    "label": "December",
                    "value": 12,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_day"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Day",
                    "value": 0,
                  },
                  Object {
                    "label": "01",
                    "value": 1,
                  },
                  Object {
                    "label": "02",
                    "value": 2,
                  },
                  Object {
                    "label": "03",
                    "value": 3,
                  },
                  Object {
                    "label": "04",
                    "value": 4,
                  },
                  Object {
                    "label": "05",
                    "value": 5,
                  },
                  Object {
                    "label": "06",
                    "value": 6,
                  },
                  Object {
                    "label": "07",
                    "value": 7,
                  },
                  Object {
                    "label": "08",
                    "value": 8,
                  },
                  Object {
                    "label": "09",
                    "value": 9,
                  },
                  Object {
                    "label": "10",
                    "value": 10,
                  },
                  Object {
                    "label": "11",
                    "value": 11,
                  },
                  Object {
                    "label": "12",
                    "value": 12,
                  },
                  Object {
                    "label": "13",
                    "value": 13,
                  },
                  Object {
                    "label": "14",
                    "value": 14,
                  },
                  Object {
                    "label": "15",
                    "value": 15,
                  },
                  Object {
                    "label": "16",
                    "value": 16,
                  },
                  Object {
                    "label": "17",
                    "value": 17,
                  },
                  Object {
                    "label": "18",
                    "value": 18,
                  },
                  Object {
                    "label": "19",
                    "value": 19,
                  },
                  Object {
                    "label": "20",
                    "value": 20,
                  },
                  Object {
                    "label": "21",
                    "value": 21,
                  },
                  Object {
                    "label": "22",
                    "value": 22,
                  },
                  Object {
                    "label": "23",
                    "value": 23,
                  },
                  Object {
                    "label": "24",
                    "value": 24,
                  },
                  Object {
                    "label": "25",
                    "value": 25,
                  },
                  Object {
                    "label": "26",
                    "value": 26,
                  },
                  Object {
                    "label": "27",
                    "value": 27,
                  },
                  Object {
                    "label": "28",
                    "value": 28,
                  },
                  Object {
                    "label": "29",
                    "value": 29,
                  },
                  Object {
                    "label": "30",
                    "value": 30,
                  },
                  Object {
                    "label": "31",
                    "value": 31,
                  },
                ],
              }
            }
          />
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_year"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Year",
                    "value": 0,
                  },
                  Object {
                    "label": "2019",
                    "value": 2019,
                  },
                  Object {
                    "label": "2018",
                    "value": 2018,
                  },
                  Object {
                    "label": "2017",
                    "value": 2017,
                  },
                  Object {
                    "label": "2016",
                    "value": 2016,
                  },
                  Object {
                    "label": "2015",
                    "value": 2015,
                  },
                  Object {
                    "label": "2014",
                    "value": 2014,
                  },
                  Object {
                    "label": "2013",
                    "value": 2013,
                  },
                  Object {
                    "label": "2012",
                    "value": 2012,
                  },
                  Object {
                    "label": "2011",
                    "value": 2011,
                  },
                  Object {
                    "label": "2010",
                    "value": 2010,
                  },
                  Object {
                    "label": "2009",
                    "value": 2009,
                  },
                  Object {
                    "label": "2008",
                    "value": 2008,
                  },
                  Object {
                    "label": "2007",
                    "value": 2007,
                  },
                  Object {
                    "label": "2006",
                    "value": 2006,
                  },
                  Object {
                    "label": "2005",
                    "value": 2005,
                  },
                  Object {
                    "label": "2004",
                    "value": 2004,
                  },
                  Object {
                    "label": "2003",
                    "value": 2003,
                  },
                  Object {
                    "label": "2002",
                    "value": 2002,
                  },
                  Object {
                    "label": "2001",
                    "value": 2001,
                  },
                  Object {
                    "label": "2000",
                    "value": 2000,
                  },
                  Object {
                    "label": "1999",
                    "value": 1999,
                  },
                  Object {
                    "label": "1998",
                    "value": 1998,
                  },
                  Object {
                    "label": "1997",
                    "value": 1997,
                  },
                  Object {
                    "label": "1996",
                    "value": 1996,
                  },
                  Object {
                    "label": "1995",
                    "value": 1995,
                  },
                  Object {
                    "label": "1994",
                    "value": 1994,
                  },
                  Object {
                    "label": "1993",
                    "value": 1993,
                  },
                  Object {
                    "label": "1992",
                    "value": 1992,
                  },
                  Object {
                    "label": "1991",
                    "value": 1991,
                  },
                  Object {
                    "label": "1990",
                    "value": 1990,
                  },
                  Object {
                    "label": "1989",
                    "value": 1989,
                  },
                  Object {
                    "label": "1988",
                    "value": 1988,
                  },
                  Object {
                    "label": "1987",
                    "value": 1987,
                  },
                  Object {
                    "label": "1986",
                    "value": 1986,
                  },
                  Object {
                    "label": "1985",
                    "value": 1985,
                  },
                  Object {
                    "label": "1984",
                    "value": 1984,
                  },
                  Object {
                    "label": "1983",
                    "value": 1983,
                  },
                  Object {
                    "label": "1982",
                    "value": 1982,
                  },
                  Object {
                    "label": "1981",
                    "value": 1981,
                  },
                  Object {
                    "label": "1980",
                    "value": 1980,
                  },
                  Object {
                    "label": "1979",
                    "value": 1979,
                  },
                  Object {
                    "label": "1978",
                    "value": 1978,
                  },
                  Object {
                    "label": "1977",
                    "value": 1977,
                  },
                  Object {
                    "label": "1976",
                    "value": 1976,
                  },
                  Object {
                    "label": "1975",
                    "value": 1975,
                  },
                  Object {
                    "label": "1974",
                    "value": 1974,
                  },
                  Object {
                    "label": "1973",
                    "value": 1973,
                  },
                  Object {
                    "label": "1972",
                    "value": 1972,
                  },
                  Object {
                    "label": "1971",
                    "value": 1971,
                  },
                  Object {
                    "label": "1970",
                    "value": 1970,
                  },
                  Object {
                    "label": "1969",
                    "value": 1969,
                  },
                  Object {
                    "label": "1968",
                    "value": 1968,
                  },
                  Object {
                    "label": "1967",
                    "value": 1967,
                  },
                  Object {
                    "label": "1966",
                    "value": 1966,
                  },
                  Object {
                    "label": "1965",
                    "value": 1965,
                  },
                  Object {
                    "label": "1964",
                    "value": 1964,
                  },
                  Object {
                    "label": "1963",
                    "value": 1963,
                  },
                  Object {
                    "label": "1962",
                    "value": 1962,
                  },
                  Object {
                    "label": "1961",
                    "value": 1961,
                  },
                  Object {
                    "label": "1960",
                    "value": 1960,
                  },
                  Object {
                    "label": "1959",
                    "value": 1959,
                  },
                  Object {
                    "label": "1958",
                    "value": 1958,
                  },
                  Object {
                    "label": "1957",
                    "value": 1957,
                  },
                  Object {
                    "label": "1956",
                    "value": 1956,
                  },
                  Object {
                    "label": "1955",
                    "value": 1955,
                  },
                  Object {
                    "label": "1954",
                    "value": 1954,
                  },
                  Object {
                    "label": "1953",
                    "value": 1953,
                  },
                  Object {
                    "label": "1952",
                    "value": 1952,
                  },
                  Object {
                    "label": "1951",
                    "value": 1951,
                  },
                  Object {
                    "label": "1950",
                    "value": 1950,
                  },
                ],
              }
            }
          />
        </div>
      </div>,
      "_rendering": false,
      "_updater": [Circular],
      "_workInProgressHook": null,
    },
  },
}
`;

exports[`DateField render_DateField_with_hiddenFields 1`] = `
DateField {
  "changeHandler": [Function],
  "context": Object {},
  "propogateOnChange": [Function],
  "props": Object {
    "customClasses": "col-6",
    "formData": Object {},
    "idSchema": Object {
      "$id": "formOne_DateOne",
    },
    "schema": Object {
      "title": "Date Selector",
    },
    "uiSchema": Object {
      "ui:options": Object {
        "hiddenFields": Array [
          "day",
          "month",
        ],
        "yearsRange": Array [
          1950,
          2019,
        ],
      },
    },
  },
  "refs": Object {},
  "setState": [Function],
  "state": null,
  "updater": Updater {
    "_callbacks": Array [],
    "_renderer": ReactShallowRenderer {
      "_context": Object {},
      "_didScheduleRenderPhaseUpdate": false,
      "_dispatcher": Object {
        "readContext": [Function],
        "useCallback": [Function],
        "useContext": [Function],
        "useDebugValue": [Function],
        "useEffect": [Function],
        "useImperativeHandle": [Function],
        "useLayoutEffect": [Function],
        "useMemo": [Function],
        "useReducer": [Function],
        "useRef": [Function],
        "useState": [Function],
      },
      "_element": <DateField
        customClasses="col-6"
        formData={Object {}}
        idSchema={
          Object {
            "$id": "formOne_DateOne",
          }
        }
        schema={
          Object {
            "title": "Date Selector",
          }
        }
        uiSchema={
          Object {
            "ui:options": Object {
              "hiddenFields": Array [
                "day",
                "month",
              ],
              "yearsRange": Array [
                1950,
                2019,
              ],
            },
          }
        }
      />,
      "_firstWorkInProgressHook": null,
      "_forcedUpdate": false,
      "_instance": [Circular],
      "_isReRender": false,
      "_newState": null,
      "_numberOfReRenders": 0,
      "_renderPhaseUpdates": null,
      "_rendered": <div
        className="c-label-field"
      >
        <label
          className="control-label"
          id="formOne_DateOne"
        >
          Date Selector
        </label>
        <div
          className="d-flex"
        >
          <Dropdown
            customClasses="mr-3 w-25"
            id="formOne_DateOne_year"
            labelby="formOne_DateOne"
            onChange={[Function]}
            options={
              Object {
                "enumOptions": Array [
                  Object {
                    "label": "Year",
                    "value": 0,
                  },
                  Object {
                    "label": "2019",
                    "value": 2019,
                  },
                  Object {
                    "label": "2018",
                    "value": 2018,
                  },
                  Object {
                    "label": "2017",
                    "value": 2017,
                  },
                  Object {
                    "label": "2016",
                    "value": 2016,
                  },
                  Object {
                    "label": "2015",
                    "value": 2015,
                  },
                  Object {
                    "label": "2014",
                    "value": 2014,
                  },
                  Object {
                    "label": "2013",
                    "value": 2013,
                  },
                  Object {
                    "label": "2012",
                    "value": 2012,
                  },
                  Object {
                    "label": "2011",
                    "value": 2011,
                  },
                  Object {
                    "label": "2010",
                    "value": 2010,
                  },
                  Object {
                    "label": "2009",
                    "value": 2009,
                  },
                  Object {
                    "label": "2008",
                    "value": 2008,
                  },
                  Object {
                    "label": "2007",
                    "value": 2007,
                  },
                  Object {
                    "label": "2006",
                    "value": 2006,
                  },
                  Object {
                    "label": "2005",
                    "value": 2005,
                  },
                  Object {
                    "label": "2004",
                    "value": 2004,
                  },
                  Object {
                    "label": "2003",
                    "value": 2003,
                  },
                  Object {
                    "label": "2002",
                    "value": 2002,
                  },
                  Object {
                    "label": "2001",
                    "value": 2001,
                  },
                  Object {
                    "label": "2000",
                    "value": 2000,
                  },
                  Object {
                    "label": "1999",
                    "value": 1999,
                  },
                  Object {
                    "label": "1998",
                    "value": 1998,
                  },
                  Object {
                    "label": "1997",
                    "value": 1997,
                  },
                  Object {
                    "label": "1996",
                    "value": 1996,
                  },
                  Object {
                    "label": "1995",
                    "value": 1995,
                  },
                  Object {
                    "label": "1994",
                    "value": 1994,
                  },
                  Object {
                    "label": "1993",
                    "value": 1993,
                  },
                  Object {
                    "label": "1992",
                    "value": 1992,
                  },
                  Object {
                    "label": "1991",
                    "value": 1991,
                  },
                  Object {
                    "label": "1990",
                    "value": 1990,
                  },
                  Object {
                    "label": "1989",
                    "value": 1989,
                  },
                  Object {
                    "label": "1988",
                    "value": 1988,
                  },
                  Object {
                    "label": "1987",
                    "value": 1987,
                  },
                  Object {
                    "label": "1986",
                    "value": 1986,
                  },
                  Object {
                    "label": "1985",
                    "value": 1985,
                  },
                  Object {
                    "label": "1984",
                    "value": 1984,
                  },
                  Object {
                    "label": "1983",
                    "value": 1983,
                  },
                  Object {
                    "label": "1982",
                    "value": 1982,
                  },
                  Object {
                    "label": "1981",
                    "value": 1981,
                  },
                  Object {
                    "label": "1980",
                    "value": 1980,
                  },
                  Object {
                    "label": "1979",
                    "value": 1979,
                  },
                  Object {
                    "label": "1978",
                    "value": 1978,
                  },
                  Object {
                    "label": "1977",
                    "value": 1977,
                  },
                  Object {
                    "label": "1976",
                    "value": 1976,
                  },
                  Object {
                    "label": "1975",
                    "value": 1975,
                  },
                  Object {
                    "label": "1974",
                    "value": 1974,
                  },
                  Object {
                    "label": "1973",
                    "value": 1973,
                  },
                  Object {
                    "label": "1972",
                    "value": 1972,
                  },
                  Object {
                    "label": "1971",
                    "value": 1971,
                  },
                  Object {
                    "label": "1970",
                    "value": 1970,
                  },
                  Object {
                    "label": "1969",
                    "value": 1969,
                  },
                  Object {
                    "label": "1968",
                    "value": 1968,
                  },
                  Object {
                    "label": "1967",
                    "value": 1967,
                  },
                  Object {
                    "label": "1966",
                    "value": 1966,
                  },
                  Object {
                    "label": "1965",
                    "value": 1965,
                  },
                  Object {
                    "label": "1964",
                    "value": 1964,
                  },
                  Object {
                    "label": "1963",
                    "value": 1963,
                  },
                  Object {
                    "label": "1962",
                    "value": 1962,
                  },
                  Object {
                    "label": "1961",
                    "value": 1961,
                  },
                  Object {
                    "label": "1960",
                    "value": 1960,
                  },
                  Object {
                    "label": "1959",
                    "value": 1959,
                  },
                  Object {
                    "label": "1958",
                    "value": 1958,
                  },
                  Object {
                    "label": "1957",
                    "value": 1957,
                  },
                  Object {
                    "label": "1956",
                    "value": 1956,
                  },
                  Object {
                    "label": "1955",
                    "value": 1955,
                  },
                  Object {
                    "label": "1954",
                    "value": 1954,
                  },
                  Object {
                    "label": "1953",
                    "value": 1953,
                  },
                  Object {
                    "label": "1952",
                    "value": 1952,
                  },
                  Object {
                    "label": "1951",
                    "value": 1951,
                  },
                  Object {
                    "label": "1950",
                    "value": 1950,
                  },
                ],
              }
            }
          />
        </div>
      </div>,
      "_rendering": false,
      "_updater": [Circular],
      "_workInProgressHook": null,
    },
  },
}
`;
